import React from 'react';
import { connect } from 'react-redux';
import OpenImageDialog from '../OpenImageDialog/OpenImageDialog';
import Icon from '../../components/Icon/Icon';
import MainMenuItem from '../../components/MainMenu/MainMenuItem';
import { blurShapes } from '../../model/shapes/shapesActions';

class MIOpenImage extends React.PureComponent {
    constructor(props) {
        super(props);

        this.state = {
            open: false,
        };
    }

    onClick = () => {
        const { blurShapes } = this.props;
        blurShapes();
        this.setState({
            open: true,
        }, () => {
            requestAnimationFrame(() => {
                this.setState({
                    open: false,
                });
            });
        });
    };

    render() {
        return (
            <React.Fragment>
                <MainMenuItem onClick={this.onClick}>
                    <Icon
                        name='folder-open-o'
                        title='Open'
                    />
                </MainMenuItem>
                <OpenImageDialog
                    open={this.state.open}
                />
            </React.Fragment>
        );
    }
}

export default connect(
    () => ({}), {
        blurShapes,
    },
)(MIOpenImage);
